# test_harness_cad

./: .gitignore  E2E_TESTING_DEBUG_JOURNEY.md  README.ja.md  README.md  USAGE.ja.md  alembic.ini  debug_db.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 4483e00d5df0_add_technical_specifications_to_.py  68cfd8020346_create_project_settings_and_seed_.py  7e465b44a0bd_add_3d_model_path_and_wire_path.py  b6d3963f98ef_initial_migration.py  c1d0890e9fff_add_assembly_instruction_fields_to_.py  f03a520cf21f_add_initial_harness_seed_data.py
app/: exceptions.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/core/: config.py  config.yaml
app/db/: session.py
app/models/: __init__.py  component.py  component_category.py  harness.py  harness_design.py  project.py
app/schemas/: __init__.py  component.py  harness.py  harness_design.py  kicad_http.py  project.py  validation.py
app/services/: __init__.py  catalog.py  dxf_exporter.py  harness_service.py  importer.py  kicad_engine_service.py  validator.py
app/tests/services/: test_validator.py
e2e/backend/: debug_db.py  seed_test_data.py
e2e/docs/: E2E_TESTING_DEBUG_JOURNEY.md
e2e/frontend/: playwright.config.ts
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.css  App.tsx  index.css  setupTests.ts  types.ts
frontend/src/components/: AttributeEditorPanel.test.tsx  AttributeEditorPanel.tsx  CustomConnectorNode.tsx  CustomWireEdge.tsx  HarnessVisualizer.tsx  ImportDialog.tsx  MainCanvas.tsx  PathEditorPanel.tsx  ProjectSettingsModal.tsx  Sidebar.tsx  ThreeDViewer.tsx  WizardModal.tsx  (+1 more)
frontend/tests/: harness-editor.spec.ts
playwright-report/: index.html
scripts/: run_ci_local.sh
tests/: conftest.py
tests/services/: test_kicad_engine_service.py  test_validator.py
(+27 files in other folders)
